# NexusBrain-MCP

./: .dockerignore  .editorconfig  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  STYLE_GUIDE.md  docker-compose.dev.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: docker-publish.yml
infraestructure/: entrypoint.sh
src/core/: consts.py  logging.py  parsers.py  settings.py
src/core/interfaces/: ast.py  db.py  llm.py
src/core/services/: graph_service.py  ingestion_service.py  memory_service.py  search_service.py
src/db/: client.py
src/db/repositories/: base.py  queries.py
src/infrastructure/ast/: chunker.py  extractor.py  factory.py
src/infrastructure/ast/parsers/: python_parser.py  universal_parser.py
src/infrastructure/db/: surreal_repository.py
src/infrastructure/llm/: factory.py  huggingface_provider.py  ollama_provider.py
src/ingestion/: graph_builder.py  indexer.py  processor.py
src/presentation/cli/: cli_tool.py
src/presentation/mcp/: routes.py  server.py
