[project]
name = "nexusbrain-mcp"
version = "0.1.0"
description = "Cerebro Central local para IA. Navegación GraphRAG con SurrealDB y MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.1",
    "jinja2==3.1.6",
    "cachetools==7.0.1",
    "diskcache2==1.0.0",
    "click==8.3.1",
    "rich==14.3.3",
    "structlog==25.5.0",
    "rich-click==1.9.7",
    "mcp[cli]==1.26.0",
    "langchain==1.2.10",
    "langchain-huggingface==1.2.0",
    "langchain_ollama==1.0.1",
    "surrealdb==1.0.8",
    "langchain-text-splitters==1.1.1",
    "sentence-transformers==5.2.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "pathspec>=1.0.4",
]

# Dependencias opcionales (para Desarrollo)
[project.optional-dependencies]
dev = [
    "ruff>=0.15.1",              # Linter y Formatter todo-en-uno
    "pyrefly>=0.52.0",          # Tipado estático
    "bandit==1.9.3",            # Linter de seguridad
    "pip-audit==2.10.0",        # Verifica vulnerabilidades en dependencias
    "lizard==1.21.0",           # Analiza la complejidad ciclomática del código
]

test = [
    "pytest>=9.0.2",            # Runner de tests
    "pytest-asyncio>=1.3.0",   # Soporte async para tests
    "pytest-cov>=7.0.0",        # Reporte de cobertura
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100               # Un poco más ancho que 88 para mejor lectura en Vertical Slices

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (ordenamiento de imports)
    "B",   # flake8-bugbear (encuentra bugs probables)
    "C4",  # flake8-comprehensions (mejora list/dict comprehensions)
    "UP",  # pyupgrade (actualiza sintaxis vieja a python 3.11+)
    "SIM", # flake8-simplify (sugiere código más simple)
    "RUF", # reglas específicas de Ruff
    "T20", # flake8-print (prohibe el uso de print, obliga a usar logger)
]
ignore = [
    "B008", # Permite llamadas a funciones en definiciones de argumentos (necesario para Depends() de Litestar/FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]     # Agrupa tus propios módulos separados de las librerías
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pyrefly]
python-version = "3.13.0"
ignore-missing-imports = ["*"]
search-path = ["."]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]

# ------------------------------------------------------------------
# CONFIGURACIÓN DE PYTEST
# ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]              # Asegura que 'src' sea importable

[project.scripts]
nexusbrain-mcp = "src.presentation.mcp.server:main"
nexusbrain-cli = "src.presentation.cli.cli_tool:cli"
